--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Lucas LIma",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/juunegreiros/nodejs-api-rest.git"
+  },
+  "author": "juliana negreiros",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/juunegreiros/nodejs-api-rest/issues"
+  },
+  "homepage": "https://github.com/juunegreiros/nodejs-api-rest#readme",
   "dependencies": {
     "consign": "^0.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
